# flyio-rust

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yaml  flake.nix  fly.toml  index.html  justfile  tailwind.config.js
.sqlx/: query-114788c52e50bfc42080858c1061aedebf70f526eb9558ea0b4f9bc8ecb2547f.json  query-22dd03e9db1480b52ee60e3d37c7692fd66188a437d5afd109295b37db7b4fd4.json  query-36e8412d402c7eea8090c9206691f4ca7da07431663cd04f062fb573ef107658.json  query-388c75c6e5e1562d1019da8a9f461fe5438b1c3e0fafa3ae6c2da6fb8c160f9f.json  query-4eb8eeb00978552a0b2aa5c7d0b5f626650a1c8da512c05570af148f3eebea36.json  query-606c4ddd1c0befa57300754421053009d6dea54ef2067a017d647e09fa6c9bbe.json  query-74eb31ac1ce731dc7f5611c3308a239e4681d28bbf1dcf0e529eb41344277616.json  query-82cecc1530b7da8298aeb61356869b5a7bc0ee4d7da473f7c1a78d59d4a8668c.json  query-874b97cb344440cbd14c9a06da7b8d732dd9dffc0ef46f1e2afc02fa81b7a124.json  query-b988a9113e43cf5e1efe685d2e92b1f147827fbd8593f71792bdb40374c46a1b.json  query-c58f9042835552e28c4d6ea3917e55a7756e37dc6fefd5fec1d60a12f1780658.json  query-c85a3dbdf4dfa1a049c22741722330dc36a52d4eb60e4ff638a022f9c831183d.json  query-dbe074bc276a3b5bb9814ed791ed695aada5f2ae0d5f0c6466d122933f32a57e.json  query-dd2c3811d806103342f9e438e721f92f4cf4585d68d51cb669a8313aeb358e19.json  query-e2133901f78185c2a07338672a50db7e3670603830c0e781dfd776b14306e831.json  query-faba614241c5aa65f993182fc9bc259660b8c6dcbf8d99f0c18be9104e9940c4.json  query-fba7258bed073fcbafa6ee516c0dffa784b24ca76febef96c4802f7dbabc5429.json
migrations/: 20231108061609_create-items.sql  20231114222349_rename-items-to-todos.sql  20231116054537_add_done_flag_to_todos.sql  20231117071346_add_authentication_tables.sql
src/: auth.rs  error.rs  lib.rs  main.rs  templates.rs  validators.rs
src/api/: auth.rs  items.rs  mod.rs  todos.rs
src/data/: item.rs  mod.rs  todo.rs  user.rs
static/: main.css
templates/: base.html  edit_todo.html  items.html  login.html  not_found.html  signup.html  single_todo.html  todos.html  todos_partial.html
templates/layout/: base.html
templates/partial/: todo.html  todo_edit.html  todos.html
