[package]
name = "flyio-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"   # Optimize for size.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable Link Time Optimization (LTO)
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["macros"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_with = { version = "3.4.0", features = ["time_0_3"] }
sqlx = { version = "0.7.2", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "macros",
  "time",
  "uuid",
] }
thiserror = "1.0.50"
time = "0.3.30"
tokio = { version = "1.33.0", features = ["full"] }
uuid = { version = "1.5.0", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }
